# OpencvLearn

./: .gitignore  CMakeLists.txt  README.md
learn_examples/: CMakeLists.txt  CMakeLists.txt.bakkk  mat.cpp  mouse_line.cpp  mouse_rectangle.cpp  nms.cpp  read_img.cpp  simple_animation.cpp  subtract_divide.cpp
makefile_old/mat/: Makefile
makefile_old/read_img/: Makefile
